--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "file-copy-no-overwrite": "git+https://github.com/dikac/file-copy-no-overwrite.git",
     "npm-run-all": "^4.1.5",
     "t-object": "git+https://github.com/dikac/t-object.git",
-    "typescript": "=3.5.3"
+    "typescript": "^3.6.4"
   },
   "devDependencies": {
     "@types/jasmine": "^3.4.0",
