--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "t-validatable",
-  "version": "0.6.3",
+  "version": "0.11.3",
   "description": "Typescript validatable",
   "dependencies": {
     "@types/node": "^12.12.11",
     "dist-mover": "git+https://github.com/dikac/dist-mover.git",
     "npm-run-all": "^4.1.5",
     "t-object": "git+https://github.com/dikac/t-object.git",
+    "t-value": "git+https://github.com/dikac/t-value.git",
+    "t-message": "git+https://github.com/dikac/t-message.git",
     "typescript": "^3.7.2"
   },
   "devDependencies": {
@@ -27,7 +29,6 @@
   },
   "files": [
     "tsconfig.json",
-    "src/",
     "dist/",
     "LICENSE",
     "Readme.md"
