--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "t-validatable",
-  "version": "0.6.3",
+  "name": "@dikac/t-validatable",
+  "version": "0.6.4",
   "description": "Typescript validatable",
   "dependencies": {
+    "@dikac/t-object": "^0.9.23",
     "@types/node": "^12.12.11",
-    "dist-mover": "git+https://github.com/dikac/dist-mover.git",
+    "dist-mover": "0.0.9",
     "npm-run-all": "^4.1.5",
-    "t-object": "git+https://github.com/dikac/t-object.git",
     "typescript": "^3.7.2"
   },
   "devDependencies": {
@@ -27,7 +27,6 @@
   },
   "files": [
     "tsconfig.json",
-    "src/",
     "dist/",
     "LICENSE",
     "Readme.md"
