--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "@dikac/t-validatable",
-  "version": "0.6.7",
+  "version": "0.6.8",
   "description": "Typescript validatable",
   "dependencies": {
     "@dikac/deployer": "^0.1.2",
+    "@dikac/t-message": "^0.1.2",
     "@dikac/t-object": "^0.10.3",
+    "@dikac/t-value": "^0.2.0",
     "@types/node": "^12.12.24",
     "npm-run-all": "^4.1.5",
     "typescript": "^3.7.4"
