--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@dikac/t-validatable",
-  "version": "0.6.8",
+  "version": "0.6.9",
   "description": "Typescript validatable",
   "dependencies": {
-    "@dikac/deployer": "^0.1.2",
-    "@dikac/t-message": "^0.1.2",
-    "@dikac/t-object": "^0.10.3",
-    "@dikac/t-value": "^0.2.0",
+    "@dikac/deployer": "^0.1.3",
+    "@dikac/t-message": "^0.1.3",
+    "@dikac/t-object": "^0.10.4",
+    "@dikac/t-value": "^0.2.1",
     "@types/node": "^12.12.24",
     "npm-run-all": "^4.1.5",
     "typescript": "^3.7.4"
@@ -24,7 +24,7 @@
     "spec-compile-watch-script": "tsc -w -p tsconfig-spec.json",
     "compile": "tsc",
     "compile-watch": "tsc -w",
-    "postinstall": "npm-run-all deploy",
+    "postinstall": "npm run deploy",
     "deploy": "deployer /.git /dist /"
   },
   "files": [
