--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
   "name": "@dikac/t-validatable",
-  "version": "0.6.9",
+  "version": "0.6.10",
   "description": "Typescript validatable",
   "dependencies": {
-    "@dikac/deployer": "^0.1.3",
-    "@dikac/t-message": "^0.1.3",
-    "@dikac/t-object": "^0.10.4",
-    "@dikac/t-value": "^0.2.1",
-    "@types/node": "^12.12.24",
-    "npm-run-all": "^4.1.5",
-    "typescript": "^3.7.4"
+    "@dikac/t-message": "^0.1.4",
+    "@dikac/t-object": "^0.10.7",
+    "@dikac/t-value": "^0.2.2"
   },
   "devDependencies": {
+    "@types/node": "^12.12.24",
+    "typescript": "^3.7.4",
     "@types/jasmine": "^3.5.0",
-    "jasmine": "^3.4.0"
+    "npm-run-all": "^4.1.5",
+    "pjson-private-remover": "^0.1.0",
+    "jasmine": "^3.4.0",
+    "move-cli": "^1.2.1",
+    "cpy-cli": "^3.0.0",
+    "rimraf": "^3.0.0"
   },
   "scripts": {
     "spec-run": "jasmine --config=./jasmine.json",
@@ -24,14 +27,12 @@
     "spec-compile-watch-script": "tsc -w -p tsconfig-spec.json",
     "compile": "tsc",
     "compile-watch": "tsc -w",
-    "postinstall": "npm run deploy",
-    "deploy": "deployer /.git /dist /"
+    "release": "remove-private-field dist/package.json",
+    "postrelease": "npm publish dist",
+    "prerelease": "cpy     package.json package-lock.json LICENSE Readme.md .npmignore dist",
+    "postpublish": "rimraf package.json package-lock.json LICENSE Readme.md .npmignore"
   },
-  "files": [
-    "dist/",
-    "LICENSE",
-    "Readme.md"
-  ],
+  "private": true,
   "author": "",
   "license": "MIT"
 }
