--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "name": "@dikac/t-validatable",
-  "version": "0.6.10",
+  "version": "0.6.11",
   "description": "Typescript validatable",
   "dependencies": {
-    "@dikac/t-message": "^0.1.4",
-    "@dikac/t-object": "^0.10.7",
-    "@dikac/t-value": "^0.2.2"
+    "@dikac/t-message": "^0.1.5",
+    "@dikac/t-object": "^0.10.8",
+    "@dikac/t-value": "^0.2.3"
   },
   "devDependencies": {
     "@types/node": "^12.12.24",
     "typescript": "^3.7.4",
     "@types/jasmine": "^3.5.0",
     "npm-run-all": "^4.1.5",
-    "pjson-private-remover": "^0.1.0",
+    "json-properties-remover": "^0.1.2",
     "jasmine": "^3.4.0",
     "move-cli": "^1.2.1",
     "cpy-cli": "^3.0.0",
@@ -27,7 +27,7 @@
     "spec-compile-watch-script": "tsc -w -p tsconfig-spec.json",
     "compile": "tsc",
     "compile-watch": "tsc -w",
-    "release": "remove-private-field dist/package.json",
+    "release": "remove-json-properties dist/package.json private",
     "postrelease": "npm publish dist",
     "prerelease": "cpy     package.json package-lock.json LICENSE Readme.md .npmignore dist",
     "postpublish": "rimraf package.json package-lock.json LICENSE Readme.md .npmignore"
