--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Typescript validatable",
   "dependencies": {
     "@dikac/t-message": "^0.1.5",
-    "@dikac/t-object": "^0.10.8",
-    "@dikac/t-value": "^0.2.3"
+    "@dikac/t-object": "^0.13.0",
+    "@dikac/t-value": "^0.4.0",
+    "utility-types": "^3.10.0"
   },
   "devDependencies": {
     "@types/node": "^12.12.24",
