--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.7.0",
   "description": "Typescript validatable",
   "dependencies": {
+    "@dikac/deployer": "^0.1.4",
+    "@dikac/t-boolean": "^0.5.0",
+    "@dikac/t-function": "^0.1.0",
     "@dikac/t-message": "^0.1.5",
-    "@dikac/t-object": "^0.13.0",
+    "@dikac/t-object": "^0.14.0",
     "@dikac/t-value": "^0.4.0",
-    "utility-types": "^3.10.0",
-    "@dikac/deployer": "^0.1.4"
+    "utility-types": "^3.10.0"
   },
   "devDependencies": {
     "@types/node": "^12.12.24",
