--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@dikac/deployer": "^0.1.5",
     "@dikac/t-boolean": "git+file:///b:/t-boolean",
-    "@dikac/t-function": "^0.1.0",
+    "@dikac/t-function": "git+file:///b:/t-function",
     "@dikac/t-iterable": "git+file:///b:/t-iterable",
     "@dikac/t-message": "git+file:///b:/t-message",
     "@dikac/t-object": "git+file:///b:/t-object",
@@ -13,7 +13,7 @@
     "utility-types": "^3.10.0"
   },
   "devDependencies": {
-    "@types/jasmine": "^3.5.10",
+    "@types/jasmine": "^3.5.11",
     "@types/node": "^12.12.47",
     "cpy-cli": "^3.1.1",
     "jasmine": "^3.4.0",
@@ -22,7 +22,7 @@
     "move-cli": "^1.2.1",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
-    "typescript": "^3.9.5"
+    "typescript": "^3.9.6"
   },
   "scripts": {
     "spec-run": "jasmine --reporter=jasmine-ts-console-reporter --config=./jasmine.json",
