--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
   "name": "@dikac/t-validatable",
-  "version": "0.9.0",
+  "version": "0.10.0",
   "description": "Typescript validatable",
   "dependencies": {
     "@dikac/deployer": "^0.1.5",
-    "@dikac/t-boolean": "git+file:///b:/t-boolean",
-    "@dikac/t-function": "git+file:///b:/t-function",
-    "@dikac/t-iterable": "git+file:///b:/t-iterable",
-    "@dikac/t-message": "git+file:///b:/t-message",
-    "@dikac/t-object": "git+file:///b:/t-object",
-    "@dikac/t-value": "git+file:///b:/t-value",
+    "@dikac/t-boolean": "^0.6.0",
+    "@dikac/t-function": "^0.4.0",
+    "@dikac/t-iterable": "^0.1.0",
+    "@dikac/t-message": "^0.5.2",
+    "@dikac/t-object": "^0.17.0",
+    "@dikac/t-value": "^0.7.0",
     "ts-toolbelt": "^6.12.1"
   },
   "devDependencies": {
     "@types/jasmine": "^3.5.11",
-    "@types/node": "^12.12.47",
+    "@types/node": "^12.12.50",
     "cpy-cli": "^3.1.1",
     "jasmine": "^3.4.0",
     "jasmine-ts-console-reporter": "^3.1.1",
