rename component to more appropriate, cleanup

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dikac/t-validatable",
-  "version": "0.16.1",
+  "version": "0.17.0",
   "description": "Typescript validatable",
   "dependencies": {
     "@dikac/deployer": "^0.1.5",
@@ -11,6 +11,7 @@
     "ts-toolbelt": "^6.13.11"
   },
   "devDependencies": {
+    "ts-cleaner": "^1.0.5",
     "@types/jasmine": "^3.5.11",
     "cpy-cli": "^3.1.1",
     "jasmine": "^3.4.0",
@@ -22,14 +23,21 @@
     "typescript": "^3.9.7"
   },
   "scripts": {
+    "spec-run-js": "jasmine --config=./jasmine.json",
     "spec-run": "jasmine --reporter=jasmine-ts-console-reporter --config=./jasmine.json",
     "spec": "npm-run-all spec-compile spec-run",
-    "spec-compile": "npm-run-all --parallel spec-compile-script ",
-    "spec-compile-watch": "npm-run-all --parallel spec-compile-watch-script",
+    "spec-compile": "npm-run-all spec-compile-script spec-cleanup",
+    "spec-compile-watch": "npm-run-all --parallel spec-compile-watch-script spec-cleanup-watch",
     "spec-compile-script": "tsc -p tsconfig-spec.json",
     "spec-compile-watch-script": "tsc -w -p tsconfig-spec.json",
-    "compile": "tsc",
-    "compile-watch": "tsc -w",
+    "compile-script": "tsc",
+    "compile": "npm-run-all compile-script cleanup",
+    "cleanup": "ts-cleaner --verbose --dist=dist --src=src",
+    "cleanup-watch": "ts-cleaner --verbose --dist=dist --src=src --watch",
+    "spec-cleanup": "ts-cleaner --verbose --dist=dist-spec --src=spec",
+    "spec-cleanup-watch": "ts-cleaner --verbose --dist=dist-spec --src=spec --watch",
+    "compile-script-watch": "tsc -w",
+    "compile-watch": "npm-run-all --parallel compile-script-watch cleanup-watch",
     "release": "remove-json-properties dist/package.json private scripts.postinstall scripts.deploy dependencies.@dikac/deployer",
     "postrelease": "npm publish dist",
     "prerelease": "cpy     package.json package-lock.json LICENSE Readme.md .npmignore dist",
