--- a/package.json
+++ b/package.json
@@ -1,33 +1,35 @@
 {
   "name": "@dikac/t-validatable",
-  "version": "0.17.1",
+  "version": "0.17.2",
   "description": "Typescript validatable",
   "dependencies": {
     "@dikac/deployer": "^0.1.5",
-    "@dikac/t-boolean": "^0.7.4",
-    "@dikac/t-function": "^0.9.1",
-    "@dikac/t-object": "^0.22.0",
-    "@dikac/t-value": "^0.8.9",
-    "ts-toolbelt": "^6.13.11"
+    "@dikac/t-boolean": "^0.7.6",
+    "@dikac/t-function": "^0.10.0",
+    "@dikac/t-object": "^0.26.0",
+    "@dikac/t-value": "^0.8.12",
+    "ts-toolbelt": "^6.13.28"
   },
   "devDependencies": {
-    "ts-cleaner": "^1.0.5",
     "@types/jasmine": "^3.5.11",
     "cpy-cli": "^3.1.1",
-    "jasmine": "^3.4.0",
+    "jasmine": "^3.6.0",
     "jasmine-ts-console-reporter": "^3.1.1",
     "json-properties-remover": "^0.1.2",
+    "mkdirp": "^1.0.4",
     "move-cli": "^1.2.1",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
+    "ts-cleaner": "^1.0.5",
     "typescript": "^3.9.7"
   },
   "scripts": {
     "spec-run-js": "jasmine --config=./jasmine.json",
     "spec-run": "jasmine --reporter=jasmine-ts-console-reporter --config=./jasmine.json",
     "spec": "npm-run-all spec-compile spec-run",
+    "spec-ensure-directory": "mkdirp dist-spec",
     "spec-compile": "npm-run-all spec-compile-script spec-cleanup",
-    "spec-compile-watch": "npm-run-all --parallel spec-compile-watch-script spec-cleanup-watch",
+    "spec-compile-watch": "npm-run-all --sequential spec-ensure-directory --parallel spec-compile-watch-script spec-cleanup-watch",
     "spec-compile-script": "tsc -p tsconfig-spec.json",
     "spec-compile-watch-script": "tsc -w -p tsconfig-spec.json",
     "compile-script": "tsc",
@@ -37,7 +39,8 @@
     "spec-cleanup": "ts-cleaner --verbose --dist=dist-spec --src=spec",
     "spec-cleanup-watch": "ts-cleaner --verbose --dist=dist-spec --src=spec --watch",
     "compile-script-watch": "tsc -w",
-    "compile-watch": "npm-run-all --parallel compile-script-watch cleanup-watch",
+    "compile-watch": "npm-run-all --sequential compile-ensure-directory --parallel compile-script-watch cleanup-watch",
+    "compile-ensure-directory": "mkdirp dist",
     "release": "remove-json-properties dist/package.json private scripts.postinstall scripts.deploy dependencies.@dikac/deployer",
     "postrelease": "npm publish dist",
     "prerelease": "cpy     package.json package-lock.json LICENSE Readme.md .npmignore dist",
