--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "dependencies": {
     "@dikac/deployer": "^0.1.5",
     "@dikac/t-boolean": "^0.9.4",
-    "@dikac/t-function": "^0.12.5",
-    "@dikac/t-object": "^0.34.1",
+    "@dikac/t-function": "^0.12.6",
+    "@dikac/t-object": "^0.34.2",
     "@dikac/t-string": "^0.14.2",
     "@dikac/t-value": "^0.12.8",
-    "ts-toolbelt": "^6.15.5"
+    "ts-toolbelt": "^8.0.6"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "@types/jasmine": "^3.5.14",
     "cpy-cli": "^3.1.1",
     "jasmine": "^3.6.1",
@@ -21,11 +23,11 @@
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
     "ts-cleaner": "^1.0.5",
-    "typescript": "^3.9.7"
+    "typescript": "^4.0.2"
   },
   "scripts": {
-    "spec-run-js": "jasmine --config=./jasmine.json",
-    "spec-run": "jasmine --reporter=jasmine-ts-console-reporter --config=./jasmine.json",
+    "spec-run-js": "babel-node dist-spec/jasmine-js.js",
+    "spec-run": "babel-node dist-spec/jasmine-ts.js",
     "spec": "npm-run-all spec-compile spec-run",
     "spec-ensure-directory": "mkdirp dist-spec",
     "spec-compile": "npm-run-all spec-compile-script spec-cleanup",
