--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
   "name": "@dikac/t-validatable",
-  "version": "0.19.0",
+  "version": "0.19.1",
   "description": "Typescript validatable",
   "dependencies": {
     "@dikac/deployer": "^0.1.5",
     "@dikac/t-boolean": "^0.10.0",
-    "@dikac/t-function": "^0.14.0",
-    "@dikac/t-object": "^0.35.0",
-    "@dikac/t-string": "^0.15.0",
+    "@dikac/t-function": "^0.14.1",
+    "@dikac/t-object": "^0.35.2",
+    "@dikac/t-string": "^0.15.1",
     "@dikac/t-value": "^0.14.0",
     "ts-toolbelt": "^8.0.6"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
+    "esm": "^3.2.25",
     "@types/jasmine": "^3.5.14",
     "cpy-cli": "^3.1.1",
     "jasmine": "^3.6.1",
@@ -26,8 +25,8 @@
     "typescript": "^4.0.2"
   },
   "scripts": {
-    "spec-run-js": "babel-node dist-spec/jasmine-js.js",
-    "spec-run": "babel-node dist-spec/jasmine-ts.js",
+    "spec-run-js": "node -r esm node_modules/jasmine/bin/jasmine.js --config=./jasmine.json",
+    "spec-run": "node -r esm node_modules/jasmine/bin/jasmine.js --config=./jasmine.json --reporter=jasmine-ts-console-reporter",
     "spec": "npm-run-all spec-compile spec-run",
     "spec-ensure-directory": "mkdirp dist-spec",
     "spec-compile": "npm-run-all spec-compile-script spec-cleanup",
